discussion/kv_engine/142736/142736_rev36_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Remove interfaces from memcached.json [3/3]

This patch removes the old definition of interfaces through
memcached.json

Change-Id: If56d95b7ea8ee6086c6c4d80c3aea536a4a7fc9a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:09:29.000000000
Message: 
Uploaded patch set 36: Patch Set 35 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 09:07:28.000000000
Message: 
Patch Set 36: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36731/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36731/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9767/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9767/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9767/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19349/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8363/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/287/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31397/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10415/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11768/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11342/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11491/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 13:53:31.000000000
Message: 
Patch Set 36:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9767/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9767/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9767/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19349/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19349/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d000010e80 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19349/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36765/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0064/0157]: duplicate items on disk...WARNING: Logging before InitGoogleLogging() is written to STDERR
W0611 06:43:43.534282 45476 HazptrDomain.h:671] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object


99% tests passed, 1 tests failed out of 407

Total Test time (real) = 637.33 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36765/ )

Timeout of a CTest test 407/407 Test #250: ep_testsuite.value_eviction.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36765/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8363/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/287/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31397/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10415/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11768/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11342/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11491/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
